--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Personalized Greeting</title>
+  <title>Personalized Greeting 2</title>
   <style>
     body { font-family: sans-serif; text-align: center; }
     h1 { margin-top: 40vh; } 
